--- a/style.css
+++ b/style.css
@@ -96,8 +96,8 @@ h1 {
 .cards {
     background-color: #ffc200;
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .col {
@@ -131,4 +131,12 @@ h1 {
     font-size: 12px;
     margin-bottom: 0;
     margin-left: 20px;
+}
+
+#creator {
+    float: right;
+    font-family: "Dancing script", cursive;
+    margin-right: 20px;
+    margin-bottom: 100px;
+    color: #000;
 }
